# Postpay

./: README.md
api/: .dockerignore  .gitignore  .hadolint.yml  Dockerfile  Makefile  README.md  build-compose.yml  buildspec.yml  docker-compose.yml  manage.py  setup.cfg  zappa_settings.json
api/config/: apps.py  graphql_views.py  handler.py  hosts.py  views.py  wsgi.py
api/config/schemas/: __init__.py  checkouts.py  common.py  customers.py  merchants.py  one.py
api/config/settings/: base.py  development.py  lambda.py  test.py
api/config/urls/: admin.py  api.py  debug.py  static.py
api/docker/: entrypoint
api/lambda/: Dockerfile  deploy.sh  entrypoint
api/lambda/policies/: assume.json  attach_dev.json  attach_prod.json  attach_sandbox.json  codebuild.yml
api/postpay/sidebar/: apps.py  menu.py
api/postpay/sidebar/templatetags/: sidebar.py
api/postpay/templates/: 404.html  500.html  503.html  base.html
api/postpay/templates/admin/: base_site.html  change_list.html
api/postpay/users/: admin.py  apps.py  factories.py  fields.py  mail.py  managers.py  middleware.py  models.py  settings.py  tasks.py
api/postpay/users/graphql/: __init__.py  mutations.py  nodes.py  queries.py
api/postpay/users/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_email.py
api/postpay/users/restful/: authentication.py
api/postpay/users/signals/: handlers.py
api/postpay/users/tests/: conftest.py  test_managers.py  (+2 more)
api/requirements/: common.txt  debug.txt  development.txt  gateways.txt  lambda.txt  lint.txt  private.txt  production.txt  test.txt
(+502 files in other folders)
