[metadata]
license_file = LICENSE

[flake8]
exclude = */migrations,.dev/
extend-ignore=C812, C816, E501
max-line-length = 88

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = yes
skip = migrations
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_django = django
known_first_party =
  bigcommerce_gateway
  checkouts
  countries
  customers
  devices
  fraud_rules
  gateways
  hooks
  instalment_plans
  merchants
  notifications
  orders
  payment_methods
  payments
  phones
  settings
  shopify_gateway
  users
  utils


[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings.test
addopts =
  --reuse-db
  --verbose
env =
  DJANGO_ALLOWED_HOSTS=*
  DJANGO_TEMPLATE_DEBUG=true
  DJANGO_EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
  CACHEOPS_ENABLED=false
  MJML_TO_HTML_FUNCTION_NAME=mjml-dev-to-html
  HTML_TO_PDF_FUNCTION_NAME=html-to-pdf-dev

[coverage:run]
omit = */migrations/*,*/templates/*
plugins =
  django_coverage_plugin
